# src/routes/index.js
@@ -1,6 +1,6 @@
 const router = require("express").Router();
 
-router.use("/", require("./swagger"));
+router.use("/api-docs", require("./swagger"));
 router.use("/contacts", require("./contacts"));
 
 router.get("*", (req, res) => {
